--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/lobster": "^0.2.3",
+    "@expo-google-fonts/nunito": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "expo": "~50.0.6",
+    "expo-constants": "^15.4.5",
+    "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
